tests/csmith/bad/smith001760.c
/*
 * This is a RANDOMLY GENERATED PROGRAM.
 *
 * Generator: csmith 2.0.0
 * svn version: exported
 * Options:   --check-global -s 1760
 * Seed:      1760
 */

#include "random_runtime.h"


long __undefined;

/* --- Struct/Union Declarations --- */
struct S0 {
   int16_t  f0;
};

struct S2 {
    volatile uint32_t  f0;
   struct S0  f1;
   struct S0  f2;
   uint16_t  f3;
   uint64_t  f4;
   uint32_t  f5;
   int64_t  f6;
   uint32_t  f7;
    volatile struct S0  f8;
};

/* --- GLOBAL VARIABLES --- */
struct S2 g_2 = {0x3921DED6L,{-2L},{0x4555L},-10L,1L,0xFE4D9EDBL,0xA7FE64FD9E2A8D3ALL,0L,{6L}};/* VOLATILE GLOBAL g_2 */


/* --- FORWARD DECLARATIONS --- */
struct S2  func_1(void);


/* --- FUNCTIONS --- */
/* ------------------------------------------ */
/* 
 * reads : g_2
 * writes:
 */
struct S2  func_1(void)
{ /* block id: 0 */
    return g_2;
}




/* ---------------------------------------- */
int main (int argc, char* argv[])
{
    func_1();
    printf("checksum g_2.f0 = %d\n", g_2.f0);
    printf("checksum g_2.f1.f0 = %d\n", g_2.f1.f0);
    printf("checksum g_2.f2.f0 = %d\n", g_2.f2.f0);
    printf("checksum g_2.f3 = %d\n", g_2.f3);
    printf("checksum g_2.f4 = %d\n", g_2.f4);
    printf("checksum g_2.f5 = %d\n", g_2.f5);
    printf("checksum g_2.f6 = %d\n", g_2.f6);
    printf("checksum g_2.f7 = %d\n", g_2.f7);
    printf("checksum g_2.f8.f0 = %d\n", g_2.f8.f0);
}

/************************ statistics *************************
XXX max struct depth: 4
breakdown:
   depth: 0, occurrence: 0
   depth: 1, occurrence: 0
   depth: 2, occurrence: 0
   depth: 3, occurrence: 0
   depth: 4, occurrence: 1

XXX max expression depth: 0
breakdown:
   depth: 0, occurrence: 1

XXX total number of pointers: 0

XXX times a non-volatile is read: 1
XXX times a non-volatile is write: 0
XXX times a volatile is read: 0
XXX    times read thru a pointer: 0
XXX times a volatile is write: 0
XXX    times written thru a pointer: 0
XXX times a volatile is available for access: 0
XXX percentage of non-volatile access: 100

XXX forward jumps: 0
XXX backward jumps: 0

XXX stmts: 2

XXX percentage a fresh-made variable is used: 100
XXX percentage an existing variable is used: 0
********************* end of statistics **********************/

